--- a/pyproject.toml
+++ b/pyproject.toml
@@ -59,7 +59,7 @@ urls.Changelog = "https://github.com/alanmehio/multimedia-translator/blob/master
 ### Dependency Constraints, aka Requirements ###
 # see https://python-poetry.org/docs/dependency-specification/#multiple-constraints-project
 dependencies = [
- "googletrans==4.0.2",
+ "googletrans==4.0.2", # note reliable person usage and lab 
  "libretranslate==1.7.2" # https://docs.libretranslate.com/
 ]
 
