Added a section for rewan / edited tox.ini to fail under 95% coverage

--- a/tox.ini
+++ b/tox.ini
@@ -68,7 +68,7 @@ extras =
 commands =
     pytest -ra --cov --cov-report=term-missing \
       --cov-report=html:{envdir}/htmlcov --cov-context=test \
-      {posargs} tests
+      --cov-fail-under=95 {posargs} tests
 
 
 #######################
