--- a/tox.ini
+++ b/tox.ini
@@ -53,7 +53,7 @@ setenv =
     PYTHONBUFFERED = yes
     TEST_RESULTS_DIR = {toxinidir}{/}test-results
     MYPYPATH = {toxinidir}{/}src{/}stubs
-    PY_PACKAGE = multimedia_translator
+    PY_PACKAGE = multimodaltranslation
     PKG_VERSION = 1.0.0 # Attention: This needs to be changed if you upgrade project toml version 
     DIST_DIR = wheels-pip
     COVERAGE_FILE = {toxworkdir}{/}.coverage.{envname}
@@ -74,10 +74,10 @@ commands =
 #######################
 ### Package Version ###
 #######################
-#Note: sets the package version from the src/multimedia_translator/__init__.py
+#Note: sets the package version from the src/multimodaltranslation/__init__.py
 # Alan FIXME 
 [testenv:version]
-commands = python -c "import importlib.metadata; import os; os.environ['PKG_VERSION']=importlib.metadata.version('multimedia_translator');print(os.environ['PKG_VERSION'])"
+commands = python -c "import importlib.metadata; import os; os.environ['PKG_VERSION']=importlib.metadata.version('multimodaltranslation');print(os.environ['PKG_VERSION'])"
 
 
 # DEV
@@ -335,7 +335,9 @@ commands =
 [testenv:type]
 description = Type checking with mypy
 basepython = {env:TOXPYTHON:python313}
-deps = mypy
+deps = 
+    mypy
+    types-requests
 skip_install = true
 changedir = {toxinidir}
 commands_pre =
