fixed some tox issues

--- a/tox.ini
+++ b/tox.ini
@@ -161,8 +161,11 @@ skip_install = true
 deps =
     coverage[toml]>=5.1
     diff_cover>=6
+    pytest
+    requests
 parallel_show_output = true
 commands =
+    coverage run -m pytest {posargs:tests}
     coverage combine
     coverage report --skip-covered --show-missing -i --fail-under=95
     coverage xml -o {toxworkdir}/coverage.xml -i
