--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,9 +16,9 @@ maintainers = [{name="Iso"}, {name="Alan"}] # must be an object
 license = "AGPL-3.0-only"
 readme = {file = "README.rst", content-type = "text/x-rst"}
 
-homepage = "https://github.com/alanmehio/multimedia-translator"
-repository = "https://github.com/alanmehio/multimedia-translator"
-documentation = "https://multimedia-translator.readthedocs.io/"
+homepage = "https://github.com/alanmehio/multimodal-translation"
+repository = "https://github.com/alanmehio/multimodal-translation"
+documentation = "https://multimodal-translation.readthedocs.io/"
 
 keywords = [
     "Multimedia Translator", "AI Translation", "Central"
@@ -48,11 +48,11 @@ classifiers = [
 
 
 # PyPi url links, that appear in 'Project Links' section
-urls."Bug Tracker" = "https://github.com/alanmehio/multimedia-translator/issues"
-urls."CI: Github Actions" = "https://github.com/alanmehio/multimedia-translator/actions"
-urls.Documentation = "https://multimedia-translator.readthedocs.io/"
-urls."Source Code" = "https://github.com/alanmehio/multimedia-translator"
-urls.Changelog = "https://github.com/alanmehio/multimedia-translator/blob/master/CHANGELOG.rst"
+urls."Bug Tracker" = "https://github.com/alanmehio/multimodal-translation/issues"
+urls."CI: Github Actions" = "https://github.com/alanmehio/multimodal-translation/actions"
+urls.Documentation = "https://multimodal-translation.readthedocs.io/"
+urls."Source Code" = "https://github.com/alanmehio/multimodal-translation"
+urls.Changelog = "https://github.com/alanmehio/multimodal-translation/blob/master/CHANGELOG.rst"
 
 
 
@@ -91,7 +91,7 @@ docs =[
 # Information required for building (sdist/wheel)
 [tool.poetry]
 packages = [
-    { include = "multimedia_translator", from = "src" },
+    { include = "multimodaltranslation", from = "src" },
 ]
 
 include = [
@@ -128,7 +128,7 @@ exclude = [
 #https://python-poetry.org/docs/pyproject/#scripts
 # we will have the rfcentral script installed which will execute the main function in the console module in the rfcentral package.
 [project.scripts]
-translator = 'multimedia_translator.main:main'
+translator = 'multimodaltranslation.main:main'
  
 
 ##############
@@ -186,4 +186,4 @@ ignore = [
 # see scripts/parse_version.py 
 # we need to update in toml file above  and below also
 [tool.software-release]
-version_variable = "src/multimedia_translator/__init__.py:__version__"
+version_variable = "src/multimodaltranslationr/__init__.py:__version__"
