--- a/pyproject.toml
+++ b/pyproject.toml
@@ -65,7 +65,8 @@ dependencies = [
  "pocketsphinx==5.0.4",
  "playsound3==3.2.6",
  "gTTs==2.5.4", # Google Text to Speech
-  "gTTS-token==1.1.4" # Calculate a token to run Google Translation
+  "gTTS-token==1.1.4", # Calculate a token to run Google Translation
+  "vosk == 0.3.45"
 ]
 
 ## optional dependency for test or other purpose 
