tox fixing to include vosk

--- a/tox.ini
+++ b/tox.ini
@@ -163,6 +163,7 @@ deps =
     diff_cover>=6
     pytest
     requests
+    vosk >= 0.3.45
 parallel_show_output = true
 commands =
     coverage run -m pytest {posargs:tests}
