--- a/tox.ini
+++ b/tox.ini
@@ -53,9 +53,9 @@ setenv =
     PYTHONBUFFERED = yes
     TEST_RESULTS_DIR = {toxinidir}{/}test-results
     MYPYPATH = {toxinidir}{/}src{/}stubs
-    PY_PACKAGE = multimodaltranslation
+    PY_PACKAGE = multimodal_translation
     PKG_VERSION = 1.0.0 # Attention: This needs to be changed if you upgrade project toml version 
-    DIST_DIR = wheels-pip
+    DIST_DIR = dist
     COVERAGE_FILE = {toxworkdir}{/}.coverage.{envname}
     TEST_STATUS_DIR = {envtmpdir}
     PYPY3323BUG = 1
