--- a/tox.ini
+++ b/tox.ini
@@ -53,7 +53,7 @@ setenv =
     PYTHONBUFFERED = yes
     TEST_RESULTS_DIR = {toxinidir}{/}test-results
     MYPYPATH = {toxinidir}{/}src{/}stubs
-    PY_PACKAGE = multimodal_translation
+    PY_PACKAGE = multimodaltranslation
     PKG_VERSION = 1.0.0 # Attention: This needs to be changed if you upgrade project toml version 
     DIST_DIR = dist
     COVERAGE_FILE = {toxworkdir}{/}.coverage.{envname}
