--- a/.github/workflow/coverage.yml
+++ b/.github/workflow/coverage.yml
@@ -3,7 +3,8 @@ name: coverage
 on:
   push:
     branches:
-      - "*"
+      - '**'   # runs on all branches
+  pull_request: # also runs on PRs
 
 jobs:
   test:
@@ -12,12 +13,12 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      - name: Set up python
+      - name: Set up Python
         uses: actions/setup-python@v4
         with:
           python-version: "3.12"
       
-      - name: Install dependecies
+      - name: Install dependencies
         run: |
           pip install -r requirements.txt
           pip install pytest pytest-cov coveralls
@@ -25,5 +26,5 @@ jobs:
       - name: Run tests with coverage
         run: pytest --cov=multimodaltranslation --cov-report=xml
 
-      - name: Upload coverage to coveralls
-        uses: coverallsapp/github-actions@v2
+      - name: Upload coverage to Coveralls
+        uses: coverallsapp/github-action@v2
