--- a/tox.ini
+++ b/tox.ini
@@ -165,6 +165,7 @@ deps =
     pytest
     requests
     vosk >= 0.3.45
+    argostranslate == 1.9.6
 parallel_show_output = true
 commands =
     coverage run -m pytest {posargs:tests}
