tracing tox issue

--- a/tox.ini
+++ b/tox.ini
@@ -67,7 +67,7 @@ extras =
     test
      # extras = test line tells tox to install the optional-dependencies section listed in pyproject.toml for running your test suite; this should include pytest.
 commands =
-    pytest -ra --cov --cov-report=term-missing \
+    pytest -ra -s --cov --cov-report=term-missing \
       --cov-report=html:{envdir}/htmlcov --cov-context=test \
       --cov-fail-under=85 {posargs} tests
 
