--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -10,6 +10,11 @@ build:
   os: ubuntu-22.04
   tools:
     python: "3.13"
+  apt_packages:
+    - build-essential
+    - cmake
+    - pkg-config
+    - python3-dev
 
   # ALL JOBS implied: https://docs.readthedocs.io/en/stable/builds.html
   jobs:
