--- a/tox.ini
+++ b/tox.ini
@@ -66,6 +66,11 @@ setenv =
 extras =
     test
      # extras = test line tells tox to install the optional-dependencies section listed in pyproject.toml for running your test suite; this should include pytest.
+deps =
+    pytest
+    argos-translate
+commands_pre =
+    python scripts/install_argos_models.py
 commands =
     pytest -ra -s --cov --cov-report=term-missing \
       --cov-report=html:{envdir}/htmlcov --cov-context=test \
