--- a/tox.ini
+++ b/tox.ini
@@ -56,7 +56,7 @@ setenv =
     PY_PACKAGE = multimodaltranslation
     DIST_PACKAGE = multimodal_translation
     PKG_VERSION = 1.0.0 # Attention: This needs to be changed if you upgrade project toml version 
-    DIST_DIR = dist
+    DIST_DIR = wheels-pip
     COVERAGE_FILE = {toxworkdir}{/}.coverage.{envname}
     TEST_STATUS_DIR = {envtmpdir}
     PYPY3323BUG = 1
