--- a/pyproject.toml
+++ b/pyproject.toml
@@ -59,7 +59,7 @@ urls.Changelog = "https://github.com/Issamricin/multimodal-translation/blob/main
 ### Dependency Constraints, aka Requirements ###
 # see https://python-poetry.org/docs/dependency-specification/#multiple-constraints-project
 dependencies = [
- "torch==2.5.0",
+ "torch==2.5.0+cpu",
  "argostranslate==1.9.6",
  "pocketsphinx==5.0.4",
  "vosk >= 0.3.45",
@@ -75,7 +75,7 @@ test = [
   "pytest-cov (>=6); python_version >='3.9' and python_version <='3.13'",
   "pytest-mock (>=3.14.0); python_version >='3.9' and python_version <='3.14'",
   "vosk >= 0.3.45",
-  "torch==2.5.0",
+  "torch==2.5.0+cpu",
   "argostranslate == 1.9.6",
   "coveralls"
 ]
@@ -194,3 +194,6 @@ version_variable = "src/multimodaltranslationr/__init__.py:__version__"
 name = "pytorch-cpu"
 url = "https://download.pytorch.org/whl/torch_stable.html"
 priority = "explicit"
+
+[tool.setuptools.setup-hooks]
+set_env_vars = "setup_hooks:set_cpu_env"
