--- a/.github/workflows/ci_cd.yaml
+++ b/.github/workflows/ci_cd.yaml
@@ -154,43 +154,43 @@ jobs:
 
       - name: Install FFmpeg
         run: sudo apt update && sudo apt install ffmpeg -y
-
-      - name: Build and Test 'Edit' and 'Sdist' & Build Wheel(s)
-        run: |
-          set -o pipefail # see https://www.gnu.org/software/bash/manual/html_node/The-Set-Builtin.html
-                          
-          tox -v | tee test_output.log
-        env:
-          PLATFORM: ${{ matrix.platform }}
-          BUILD_DEST: ${{ env.WHEELS_PIP_DIR }}
-
-      - name: List Wheel(s) created for Distro and its Requirements
-        run: ls -l ${{ env.WHEELS_PIP_DIR }}
-
-      ### PARSE WHEEL File NAME ###
-      - name: Extract Wheel Name and Size
-        id: extract_wheel_info
-        shell: bash
-        run: |
-          WHEEL_INFO=$(grep -E "Created wheel for" test_output.log | sed -E "s/.*filename=([^ ]+) size=([^ ]+) .*/\1 \2/")
-
-          # extract file name
-          WHEEL_NAME=$(echo $WHEEL_INFO | cut -d ' ' -f 1)
-          echo "WHEEL_NAME=$WHEEL_NAME" >> $GITHUB_ENV
-
-          # extract file size
-          WHEEL_SIZE=$(echo $WHEEL_INFO | cut -d ' ' -f 2)
-          echo "WHEEL_SIZE=$WHEEL_SIZE" >> $GITHUB_ENV
-
-          # extract '0.3.2' from 'multimodaltranslation-0.3.2-py3-none-any.whl'
-          #echo $WHEEL_NAME | sed -E 's/multimodaltranslation-([^ ]+)-py3-none-any.whl/\1/'
-          PEP_VERSION=$(echo $WHEEL_NAME | sed -E 's/multimodaltranslation-([^ ]+)-py3-none-any.whl/\1/')
-          echo "PEP_VERSION=$PEP_VERSION"
-          echo "PEP_VERSION=$PEP_VERSION" >> $GITHUB_OUTPUT
-          echo "PEP_VERSION=$PEP_VERSION" >> $GITHUB_ENV
-
-      - run: 'echo "WHEEL_NAME: $WHEEL_NAME SIZE: $WHEEL_SIZE"'
-      - run: 'echo "PEP_VERSION: $PEP_VERSION"'
+############# Commented out for storage issues on github. The libraries installed while building the wheel are so large that there is no storage left.########
+    #  - name: Build and Test 'Edit' and 'Sdist' & Build Wheel(s)
+    #    run: |
+    #      set -o pipefail # see https://www.gnu.org/software/bash/manual/html_node/The-Set-Builtin.html
+    #                      
+    #      tox -v | tee test_output.log
+    #    env:
+    #      PLATFORM: ${{ matrix.platform }}
+    #      BUILD_DEST: ${{ env.WHEELS_PIP_DIR }}
+#
+    #  - name: List Wheel(s) created for Distro and its Requirements
+    #    run: ls -l ${{ env.WHEELS_PIP_DIR }}
+#
+    #  ### PARSE WHEEL File NAME ###
+    #  - name: Extract Wheel Name and Size
+    #    id: extract_wheel_info
+    #    shell: bash
+    #    run: |
+    #      WHEEL_INFO=$(grep -E "Created wheel for" test_output.log | sed -E "s/.*filename=([^ ]+) size=([^ ]+) .*/\1 \2/")
+#
+    #      # extract file name
+    #      WHEEL_NAME=$(echo $WHEEL_INFO | cut -d ' ' -f 1)
+    #      echo "WHEEL_NAME=$WHEEL_NAME" >> $GITHUB_ENV
+#
+    #      # extract file size
+    #      WHEEL_SIZE=$(echo $WHEEL_INFO | cut -d ' ' -f 2)
+    #      echo "WHEEL_SIZE=$WHEEL_SIZE" >> $GITHUB_ENV
+#
+    #      # extract '0.3.2' from 'multimodaltranslation-0.3.2-py3-none-any.whl'
+    #      #echo $WHEEL_NAME | sed -E 's/multimodaltranslation-([^ ]+)-py3-none-any.whl/\1/'
+    #      PEP_VERSION=$(echo $WHEEL_NAME | sed -E 's/multimodaltranslation-([^ ]+)-py3-none-any.whl/\1/')
+    #      echo "PEP_VERSION=$PEP_VERSION"
+    #      echo "PEP_VERSION=$PEP_VERSION" >> $GITHUB_OUTPUT
+    #      echo "PEP_VERSION=$PEP_VERSION" >> $GITHUB_ENV
+#
+    #  - run: 'echo "WHEEL_NAME: $WHEEL_NAME SIZE: $WHEEL_SIZE"'
+    #  - run: 'echo "PEP_VERSION: $PEP_VERSION"'
 
       ###### TEST SUITE RUN against Wheel ######
       ###### Commented out because of the big library sizes. And github has a limited size so when building the wheel it has to install all the large libraries, no space.
