fixing the dependencies

--- a/tox.ini
+++ b/tox.ini
@@ -166,6 +166,7 @@ deps =
     requests
     vosk >= 0.3.45
     argostranslate == 1.9.6
+    appdirs == 1.4.4
 parallel_show_output = true
 commands =
     coverage run -m pytest {posargs:tests}
