--- a/.github/workflows/ci_cd.yaml
+++ b/.github/workflows/ci_cd.yaml
@@ -222,27 +222,27 @@ jobs:
 
       - name: Check for compliance with Python Best Practices
         shell: bash
-        env:
-          PKG_VERSION: ${{ steps.extract_wheel_info.outputs.PEP_VERSION }}
-          WHEEL_PATH: ${{ env.WHEELS_PIP_DIR }}/${{ env.WHEEL_NAME }}
-        run: |
-          DIST_DIR=dist
-          echo "DIST_DIR=${DIST_DIR}" >> $GITHUB_ENV
-          mkdir ${DIST_DIR}
-          cp ".tox/${DIST_DIR}/multimodaltranslation-${PKG_VERSION}.tar.gz" "${DIST_DIR}"
-          cp "${{ env.WHEEL_PATH }}" "${DIST_DIR}"
-          tox -e check -v -s false
+      #  env:
+      #    PKG_VERSION: ${{ steps.extract_wheel_info.outputs.PEP_VERSION }}
+      #    WHEEL_PATH: ${{ env.WHEELS_PIP_DIR }}/${{ env.WHEEL_NAME }}
+        run: tox -e check -v -s false
+      #    DIST_DIR=dist
+      #    echo "DIST_DIR=${DIST_DIR}" >> $GITHUB_ENV
+      #    mkdir ${DIST_DIR}
+      #    cp ".tox/${DIST_DIR}/multimodaltranslation-${PKG_VERSION}.tar.gz" "${DIST_DIR}"
+      #    cp "${{ env.WHEEL_PATH }}" "${DIST_DIR}"
+      #    tox -e check -v -s false
 
       ## UPLOAD CI ARTIFACTS - Distro Build(s), 1 sdist and 1 or more wheels ##
-      - name: Upload Source & Wheel distributions as Artefacts
-        uses: actions/upload-artifact@v4.6.0
-        with:
-          name: dist-${{ matrix.platform }}-${{ matrix.python-version }}
-          path: ${{ env.DIST_DIR }}
-          if-no-files-found: error
-    outputs:
-      TEST_RESULT: ${{'success'}}
-      PEP_VERSION: ${{ steps.extract_wheel_info.outputs.PEP_VERSION }}
+    #gi  - name: Upload Source & Wheel distributions as Artefacts
+    #    uses: actions/upload-artifact@v4.6.0
+    #    with:
+    #      name: dist-${{ matrix.platform }}-${{ matrix.python-version }}
+    #      path: ${{ env.DIST_DIR }}
+    #      if-no-files-found: error
+    #outputs:
+    #  TEST_RESULT: ${{'success'}}
+    #  PEP_VERSION: ${{ steps.extract_wheel_info.outputs.PEP_VERSION }}
       
 
 
