--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,7 @@ name = "multimodal-translation" # package name same as project name
 version = "1.0.0"
 description = "AI based translation from one language to many "
 authors = [
-   {name="Iso"}, 
+   {name="Iso", email="iso.techdev@gmail.com"}, 
    {name="Alan"}
 ]
 maintainers = [{name="Iso"}, {name="Alan"}] # must be an object
@@ -29,7 +29,7 @@ requires-python = ">=3.9,<4.0"
 # Troves classifer see https://pypi.org/classifiers/
 classifiers = [
     "Development Status :: 5 - Production/Stable",
-    "Intended Audience ::Education",
+    "Intended Audience :: Education",
     "Intended Audience :: Other Audience",
     "License :: OSI Approved :: GNU Affero General Public License v3",
     "Natural Language :: English",
@@ -43,7 +43,7 @@ classifiers = [
     "Programming Language :: Python :: 3.11",
     "Programming Language :: Python :: 3.12",
     "Programming Language :: Python :: 3.13",
-    "Topic ::  Multimedia"
+    "Topic :: Multimedia"
 ]
 
 
