--- a/.github/workflows/release_test.yaml
+++ b/.github/workflows/release_test.yaml
@@ -1,6 +1,8 @@
 name: Release to TEST PyPI
 on:
   push:
+    branches:
+      - main
     tags: ["test-*"] # test-1.0.0 trigger to deploy on test pypi while release-1.0.0 is on production pypi
 
 env:
