--- a/.github/workflows/release_prod.yaml
+++ b/.github/workflows/release_prod.yaml
@@ -1,8 +1,6 @@
 name: Release to PROD PyPI
 on:
   push:
-    branches:
-      - main
     tags: ["release-*"] # test-1.0.0 trigger to deploy on test pypi while release-1.0.0 is on production pypi
 
 env:
@@ -16,6 +14,12 @@ jobs:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0
+      - name: Ensure tag is from main branch
+        run: |
+          if ! git merge-base --is-ancestor main $GITHUB_SHA; then
+            echo "Tag commit is not on main branch. Skipping release."
+            exit 1
+          fi
       - name: Install the latest version of uv
         uses: astral-sh/setup-uv@v6.4.3 # https://github.com/marketplace/actions/astral-sh-setup-uv
         with:
