fixing tox cicd

--- a/tox.ini
+++ b/tox.ini
@@ -230,7 +230,9 @@ description = Build the documentation. Read the source .rst and .py files and
     are checked.
 basepython = {env:TOXPYTHON:python313}
 setenv = {[docsenv]setenv}
-deps = myst-parser 
+deps =
+    sphinx
+    myst-parser
 usedevelop = true
 extras = docs
 changedir = {toxinidir}
